# tiqtak

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/: main.rs
src/: bitboard.rs  board.rs  direction.rs  game.rs  lib.rs  main.rs  mcts.rs  moves.rs
src/game/: action.rs  bitboard.rs  board.rs  board_impl.rs  convert64bits_to_32bits.rs  model.rs  path.rs  traits.rs  u64_shift.rs  utils.rs
src/game/board/: bitboard.rs  bitties.rs  checkers.rs  ext.rs  scale.rs  state.rs  tats.rs
src/game/model/: action.rs  bits.rs  coord.rs  path.rs  play.rs  player.rs  sq.rs
src/game/traits/: u32_shift.rs  u64_shift.rs  u8_ops.rs
src/mcts/: algo.rs  traits.rs  utils.rs
src/mcts/algo/: bandit.rs  mdp.rs  node.rs  state.rs  tree_search.rs
src/mcts/utils/: limit.rs  rand.rs  reward.rs  skill_level.rs  strategy.rs  strength.rs
