[package]
name = "tiktaq"
version = "0.1.0"
edition = "2024"
authors = ["Tolumide Shopein"]

[profile.release]
debug = true


[features]
default = []
web = ["wasm-bindgen"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
thiserror = "2.0.12"
wasm-bindgen = { version="0.2.100", optional=true }

[build]
target = "wasm32-unknown-unknown"
