[package]
name = "tiqtak"
version = "1.0.4"
edition = "2024"
authors = ["Tolumide Shopein"]
exclude = [
    ".github/*",
]
description = "simple to use Checkers engine"
license = "MIT OR Apache-2.0"
keywords = ["checkers", "mcts", "monte-carlo", "search-heuristics", "checkers-engine"]
publish = true
repository = "https://github.com/tolumide-ng/tiqtak"

[profile.release]
debug = true


[features]
default = []
web = ["dep:wasm-bindgen"]
serde = ["dep:serde"]
history = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
thiserror = "2.0.12"
wasm-bindgen = { version="0.2.100", optional=true }
serde = { version = "1.0.219", features = ["derive"], optional=true }

[build]
target = "wasm32-unknown-unknown"
